--- a/angularHTMLayout/coffee/homePage_link_in_box.html
+++ b/angularHTMLayout/coffee/homePage_link_in_box.html
@@ -3,8 +3,8 @@
   <div class="row-cell row-cell-value">
     <select ng-model="display.justify">
       <option value="center">{{$root.i18n('center')}} </option>
-      <option value="space-evenly">{{$root.i18n('space-evenly')}} </option>
-      <option value="space-between">{{$root.i18n('space-around')}} </option>
+      <option value="space-between">{{$root.i18n('space-between')}} </option>
+      <option value="space-around">{{$root.i18n('space-around')}} </option>
       <option value="flex-start">{{$root.i18n('flex-start')}} </option>
       <option value="flex-end">{{$root.i18n('flex-end')}} </option>
     </select>
@@ -17,7 +17,7 @@
   </div>
 </div>
 <div class="bootstrap-iso row">
-  <div class="row-cell row-cell-label">{{$root.i18n('label_links')}} :</div>
+  <div class="row-cell row-cell-label">{{$root.i18n('links')}} :</div>
 </div>
 <div class="row">
   <div class="row-cell row-cell-value row-cell-max-width">
