--- a/angularHTMLayout/coffee/homePage_object_description.html
+++ b/angularHTMLayout/coffee/homePage_object_description.html
@@ -6,6 +6,7 @@
         ng-options="o.scriptName as o.name for o in OT"
         ng-model="display.descriptionObjectTypeScriptname"
         ng-change="getObjects(icol,idisp,display.descriptionObjectTypeScriptname)"
+        ng-init="getObjects(icol,idisp,display.descriptionObjectTypeScriptname)"
       ></select>
     </div>
     <div class="row-cell row-cell-value">
