--- a/angularHTMLayout/coffee/pageFilter.ng.html
+++ b/angularHTMLayout/coffee/pageFilter.ng.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('Replace Accent and UpperCase')}} :&nbsp;</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('replaceAccentUpperCase')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
       <input ng-model="config.replaceAccentUpperCase" type="checkbox" />
     </div>
