adding ng because evolve need it

--- a/angularHTMLayout/coffee/diagram.ng.html
+++ b/angularHTMLayout/coffee/diagram.ng.html
@@ -1,7 +1,7 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width ">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/diagram_description.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/diagram_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
