--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -84,8 +84,8 @@
       </select>
     </div>
   </div>
-  <div ng-if="display.type === 'evolve_view'" ng-include src="'../../common/html/coffee/homePage_evolve_view.html'"></div>
-  <div ng-if="display.type === 'object_description'" ng-include src="'../../common/html/coffee/homePage_object_description.html'"></div>
-  <div ng-if="display.type === 'last_modified_object'" ng-include src="'../../common/html/coffee/homePage_last_modified_object.html'"></div>
-  <div ng-if="display.type === 'links_in_bloc'" ng-include src="'../../common/html/coffee/homePage_link_in_box.html'"></div>
+  <div ng-if="display.type === 'evolve_view'" ng-include src="'../../common/html/coffee/homePage_evolve_view.ng.html'"></div>
+  <div ng-if="display.type === 'object_description'" ng-include src="'../../common/html/coffee/homePage_object_description.ng.html'"></div>
+  <div ng-if="display.type === 'last_modified_object'" ng-include src="'../../common/html/coffee/homePage_last_modified_object.ng.html'"></div>
+  <div ng-if="display.type === 'links_in_bloc'" ng-include src="'../../common/html/coffee/homePage_link_in_box.ng.html'"></div>
 </div>
