--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -1,24 +1,40 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width ">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/actionOnObjectPage_description.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/actionOnObjectPage_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <select ng-change="selectConfig()" ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="currentView"></select>
+      <select
+        ng-change="selectConfig()"
+        ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'"
+        ng-model="currentView"
+      ></select>
     </div>
   </div>
   <div class="tabs">
-    <div ng-repeat="(i, op) in config[currentView.cwView] | orderBy:'order'" ng-class="{active: op.selected == true}" class="tab-link tab-{{op.Id}}" ng-click="selectOperation(i)" data-id="{{op.Id}}">{{op.label}}</div>
+    <div
+      ng-repeat="(i, op) in config[currentView.cwView] | orderBy:'order'"
+      ng-class="{active: op.selected == true}"
+      class="tab-link tab-{{op.Id}}"
+      ng-click="selectOperation(i)"
+      data-id="{{op.Id}}"
+    >
+      {{op.label}}
+    </div>
     <div class="add-tab-link">
-      <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('label_add_operation')}}" ng-click="addOperation()"><i class="fa fa-plus" aria-hidden="true"></i></a>
+      <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('label_add_operation')}}" ng-click="addOperation()"
+        ><i class="fa fa-plus" aria-hidden="true"></i
+      ></a>
     </div>
   </div>
   <div class="tabContent" ng-if="op.selected" ng-repeat="(i, op) in config[currentView.cwView]">
     <div class="remove-operation">
-      <a class="btn-remove btn page-action no-text" data-id="{{op.Id}}" title="{{$root.i18n('label_remove_operation')}}" ng-click="removeOperation(i)"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
+      <a class="btn-remove btn page-action no-text" data-id="{{op.Id}}" title="{{$root.i18n('label_remove_operation')}}" ng-click="removeOperation(i)"
+        ><i class="fa fa-trash-o" aria-hidden="true"></i
+      ></a>
     </div>
     <div class="bootstrap-iso rowFlex">
       <div class="row-cell row-cell-label">{{$root.i18n('label_name')}} :&nbsp;</div>
@@ -52,7 +68,9 @@
                   <option ng-selected="'prop_' + x.scriptName === f.id" value="prop_{{x.scriptName}}" ng-repeat="x in properties">{{x.name}} </option>
                 </optgroup>
                 <optgroup label="{{$root.i18n('associations')}}">
-                  <option ng-selected="'asso_' + n.nodeID === f.id" value="asso_{{n.nodeID}}" ng-repeat="n in rootNode.AssociationsTargetObjectTypes">{{n.displayNodeName}} </option>
+                  <option ng-selected="'asso_' + n.nodeID === f.id" value="asso_{{n.nodeID}}" ng-repeat="n in rootNode.AssociationsTargetObjectTypes"
+                    >{{n.displayNodeName}}
+                  </option>
                 </optgroup>
               </select>
             </td>
@@ -65,11 +83,24 @@
               <input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType(objectType, f.scriptname)==='checkbox'" />
               <input ng-model="f.Value" type="date" ng-if="getPropertyDataType(objectType, f.scriptname)==='date'" />
               <input ng-model="f.Value" type="number" ng-if="getPropertyDataType(objectType, f.scriptname)==='number'" />
-              <select ng-model="f.Value" ng-if="getPropertyDataType(objectType, f.scriptname)==='lookup' && f.Operator != 'In'" ng-options="x.id as x.name for x in objectType.properties[f.scriptname].lookups"></select>
-              <select style="height:initial" multiple size="{{objectType.properties[f.scriptname].lookups.length}}" ng-model="f.Value" ng-if="getPropertyDataType(objectType, f.scriptname)==='lookup' && f.Operator == 'In'" ng-options="x.id as x.name for x in objectType.properties[f.scriptname].lookups"></select>
+              <select
+                ng-model="f.Value"
+                ng-if="getPropertyDataType(objectType, f.scriptname)==='lookup' && f.Operator != 'In'"
+                ng-options="x.id as x.name for x in objectType.properties[f.scriptname].lookups"
+              ></select>
+              <select
+                style="height:initial"
+                multiple
+                size="{{objectType.properties[f.scriptname].lookups.length}}"
+                ng-model="f.Value"
+                ng-if="getPropertyDataType(objectType, f.scriptname)==='lookup' && f.Operator == 'In'"
+                ng-options="x.id as x.name for x in objectType.properties[f.scriptname].lookups"
+              ></select>
             </td>
             <td class="filter-cell">
-              <a class="btn page-action no-text" ng-click="currentConfig[i].filters.splice($index,1)"><i class="fa fa-times" aria-hidden="true"></i></a>
+              <a class="btn page-action no-text" ng-click="currentConfig[i].filters.splice($index,1)"
+                ><i class="fa fa-times" aria-hidden="true"></i
+              ></a>
             </td>
           </tr>
           <tr>
@@ -97,7 +128,12 @@
           <div ng-if="op.type === 'tabs'" class="row-cell row-cell-value row-cell-max-width ">
             <div class="cell-content-wrapper filter-wrapper propertieslist">
               <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
-                <a class="btn-add-filter btn page-action" ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []" ng-click="toggleArray(op.tabs,t.Id)">{{(t.Name + ' (' + t.Id + ')')}}</a>
+                <a
+                  class="btn-add-filter btn page-action"
+                  ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []"
+                  ng-click="toggleArray(op.tabs,t.Id)"
+                  >{{(t.Name + ' (' + t.Id + ')')}}</a
+                >
               </div>
             </div>
           </div>
@@ -106,7 +142,12 @@
           <div ng-if="op.type === 'views'" class="row-cell row-cell-value row-cell-max-width ">
             <div class="cell-content-wrapper filter-wrapper propertieslist">
               <div class="add-filter-button" ng-repeat="v in currentRedirectViews | orderBy:'name'">
-                <a class="btn-add-filter btn page-action" ng-class="op.views.indexOf(v.cwView) !== -1? ['selected'] : []" ng-click="toggleArray(op.views,v.cwView)">{{(v.name + ' (' + v.cwView + ')')}}</a>
+                <a
+                  class="btn-add-filter btn page-action"
+                  ng-class="op.views.indexOf(v.cwView) !== -1? ['selected'] : []"
+                  ng-click="toggleArray(op.views,v.cwView)"
+                  >{{(v.name + ' (' + v.cwView + ')')}}</a
+                >
               </div>
             </div>
           </div>
@@ -115,7 +156,12 @@
           <div ng-if="op.type === 'propertygroups'" class="row-cell row-cell-value row-cell-max-width ">
             <div class="cell-content-wrapper filter-wrapper propertieslist">
               <div class="add-filter-button" ng-repeat="p in rootNode.PropertiesGroups | orderBy:'name'">
-                <a class="btn-add-filter btn page-action" ng-class="op.propertygroups.indexOf(p.id) !== -1? ['selected'] : []" ng-click="toggleArray(op.propertygroups,p.id)">{{(p.name + ' (' + p.id + ')')}}</a>
+                <a
+                  class="btn-add-filter btn page-action"
+                  ng-class="op.propertygroups.indexOf(p.id) !== -1? ['selected'] : []"
+                  ng-click="toggleArray(op.propertygroups,p.id)"
+                  >{{(p.name + ' (' + p.id + ')')}}</a
+                >
               </div>
             </div>
           </div>
@@ -143,7 +189,12 @@
         <div ng-if="currentSchema.Tab.Tabs.length > 0" class="row-cell row-cell-value row-cell-max-width ">
           <div class="cell-content-wrapper filter-wrapper propertieslist bootstrap-iso">
             <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
-              <a class="btn-add-filter btn page-action" ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []" ng-click="toggleArray(op.tabs,t.Id)">{{(t.Name + ' (' + t.Id + ')')}}</a>
+              <a
+                class="btn-add-filter btn page-action"
+                ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []"
+                ng-click="toggleArray(op.tabs,t.Id)"
+                >{{(t.Name + ' (' + t.Id + ')')}}</a
+              >
             </div>
           </div>
         </div>
@@ -158,7 +209,16 @@
         <div class="bootstrap-iso rowFlex">
           <div class="row-cell row-cell-label">{{$root.i18n('fontawesome_icon')}} :&nbsp;</div>
           <div class="row-cell row-cell-value" style="display: flex; overflow: visible">
-            <select id="{{'action_on_page_' + i}}" ng-include src="'../../common/html/coffee/fa.html'" data-width="150px" data-live-search="true" class="fa" ng-init="bootstrapFilter('action_on_page_' + i)" ng-model="op.fontAwesome.icon" />
+            <select
+              id="{{'action_on_page_' + i}}"
+              ng-include
+              src="'../../common/html/coffee/fa.ng.html'"
+              data-width="150px"
+              data-live-search="true"
+              class="fa"
+              ng-init="bootstrapFilter('action_on_page_' + i)"
+              ng-model="op.fontAwesome.icon"
+            />
             <input type="color" ng-model="op.fontAwesome.color" />
           </div>
         </div>
