--- a/angularHTMLayout/coffee/cdsEnhanced.ng.html
+++ b/angularHTMLayout/coffee/cdsEnhanced.ng.html
@@ -1,7 +1,7 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width ">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/cdsEnhanced_description.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/cdsEnhanced_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
@@ -14,7 +14,16 @@
     <div class="row-cell row-cell-label">{{$root.i18n('cds_default_icon')}} :&nbsp;</div>
     <div class="row-cell row-cell-value ">
       <div class="bootstrap-iso" style="display: flex; overflow: visible">
-        <select ng-include src="'../../common/html/coffee/fa.html'" data-width="150px" data-live-search="true" class="fa" id="{{filterId}}" ng-init="bootstrapFilter(filterId)" ng-model="config.defaultIcon" />
+        <select
+          ng-include
+          src="'../../common/html/coffee/fa.ng.html'"
+          data-width="150px"
+          data-live-search="true"
+          class="fa"
+          id="{{filterId}}"
+          ng-init="bootstrapFilter(filterId)"
+          ng-model="config.defaultIcon"
+        />
       </div>
     </div>
   </div>
