--- a/angularHTMLayout/coffee/checkEditModel.ng.html
+++ b/angularHTMLayout/coffee/checkEditModel.ng.html
@@ -1,19 +1,26 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width ">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/checkEditModel_description.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/checkEditModel_description.ng.html'"></div>
     </div>
   </div>
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :</div>
     <div class="row-cell row-cell-value">
-      <select ng-change="updateCurrentView(currentView)" ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="currentView"></select>
+      <select
+        ng-change="updateCurrentView(currentView)"
+        ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'"
+        ng-model="currentView"
+      ></select>
     </div>
   </div>
   <div ng-if="indexUniqueOption" class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view_for_unicity_checking')}} :</div>
     <div class="row-cell row-cell-value">
-      <select ng-options="v.cwView as (v.name + ' (' + v.cwView + ')')  for v in indexpages | orderBy:'name'" ng-model="config[currentView.cwView].unicityView"></select>
+      <select
+        ng-options="v.cwView as (v.name + ' (' + v.cwView + ')')  for v in indexpages | orderBy:'name'"
+        ng-model="config[currentView.cwView].unicityView"
+      ></select>
     </div>
   </div>
   <div class="cwPropertiesTableContainer bootstrap-iso">
@@ -30,8 +37,12 @@
         </tr>
         <tr ng-repeat="p in properties">
           <th class="cw-edit-property-value ">{{p.name}} ({{p.scriptName}})</th>
-          <td ng-if="indexUniqueOption" class="cw-edit-property-value tableCheckbox"><input ng-model="config[currentView.cwView][p.scriptName].unique" type="checkbox" /></td>
-          <td class="cw-edit-property-value"><input class="cw-edit-attr" ng-model="config[currentView.cwView][p.scriptName].automaticValue" type="text" /></td>
+          <td ng-if="indexUniqueOption" class="cw-edit-property-value tableCheckbox">
+            <input ng-model="config[currentView.cwView][p.scriptName].unique" type="checkbox" />
+          </td>
+          <td class="cw-edit-property-value">
+            <input class="cw-edit-attr" ng-model="config[currentView.cwView][p.scriptName].automaticValue" type="text" />
+          </td>
           <td class="cw-hidden cw-edit-property-value tableCheckbox" ng-repeat="r in roles">
             <select class="cw-edit-attr cw-edit-attr-combobox mediumCell">
               <option>No Read</option>
@@ -57,7 +68,9 @@
         <tr ng-repeat="a in associations">
           <th class="cw-edit-property-value">{{a.displayNodeName}} ({{a.nodeID}})</th>
           <td class="cw-edit-property-value tableCheckbox"><input ng-model="config[currentView.cwView][a.nodeID].min" type="number" /></td>
-          <td class="cw-edit-property-value tableCheckbox"><input class="cw-edit-attr" ng-model="config[currentView.cwView][a.nodeID].max" type="number" /></td>
+          <td class="cw-edit-property-value tableCheckbox">
+            <input class="cw-edit-attr" ng-model="config[currentView.cwView][a.nodeID].max" type="number" />
+          </td>
         </tr>
       </tbody>
     </table>
