--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -1,7 +1,7 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width ">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/homePage_description.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/homePage_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
@@ -17,12 +17,22 @@
     </div>
   </div>
   <div class="tabs">
-    <div ng-repeat="(i, col) in config.columns | orderBy:'order'" ng-class="{active: col.selected == true}" class="tab-link tab-{{col.Id}}" ng-click="selectColumn(i)" data-id="{{col.Id}}">{{col.label}}</div>
+    <div
+      ng-repeat="(i, col) in config.columns | orderBy:'order'"
+      ng-class="{active: col.selected == true}"
+      class="tab-link tab-{{col.Id}}"
+      ng-click="selectColumn(i)"
+      data-id="{{col.Id}}"
+    >
+      {{col.label}}
+    </div>
     <div class="add-tab-link">
-      <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('add_column')}}" ng-click="addColumn()"><i class="fa fa-plus" aria-hidden="true"></i></a>
+      <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('add_column')}}" ng-click="addColumn()"
+        ><i class="fa fa-plus" aria-hidden="true"></i
+      ></a>
     </div>
   </div>
   <div class="tabContent" ng-if="col.selected" ng-repeat="(icol, col) in config.columns">
-    <div ng-include src="'../../common/html/coffee/homePage_column.html'"></div>
+    <div ng-include src="'../../common/html/coffee/homePage_column.ng.html'"></div>
   </div>
 </div>
