--- a/angularHTMLayout/coffee/redirectEdit.ng.html
+++ b/angularHTMLayout/coffee/redirectEdit.ng.html
@@ -1,19 +1,26 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-max-width ">
-      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/redirect_description.html'"></div>
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/redirect_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <select ng-change="configInit()" ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="currentView"></select>
+      <select
+        ng-change="configInit()"
+        ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'"
+        ng-model="currentView"
+      ></select>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('redirect_evolve_view')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <select ng-options="v.cwView as (v.name + ' (' + v.cwView + ')') for v in redirectViews | orderBy:'name'" ng-model="config[currentView.cwView].default"></select>
+      <select
+        ng-options="v.cwView as (v.name + ' (' + v.cwView + ')') for v in redirectViews | orderBy:'name'"
+        ng-model="config[currentView.cwView].default"
+      ></select>
     </div>
   </div>
 </div>
