adding item per pages

--- a/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
+++ b/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
@@ -13,6 +13,10 @@
     <div class="row-cell row-cell-label">Pop Out :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.popOut" /></div>
   </div>
+  <div class="bootstrap-iso rowFlex">
+    <div class="row-cell row-cell-label">{{$root.i18n('itemPerPages')}} :&nbsp;</div>
+    <div class="row-cell row-cell-value"><input type="text" ng-model="config.itemPerPages" /></div>
+  </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
