display the json configuration

--- a/angularHTMLayout/coffee/checkEditModel.ng.html
+++ b/angularHTMLayout/coffee/checkEditModel.ng.html
@@ -75,4 +75,5 @@
       </tbody>
     </table>
   </div>
+  <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
