--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -35,4 +35,5 @@
   <div class="tabContent" ng-if="col.selected" ng-repeat="(icol, col) in config.columns">
     <div ng-include src="'../../common/html/coffee/homePage_column.ng.html'"></div>
   </div>
+  <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
