--- a/angularHTMLayout/coffee/pageFilter.ng.html
+++ b/angularHTMLayout/coffee/pageFilter.ng.html
@@ -16,4 +16,5 @@
       <input ng-model="config.replaceAccentUpperCase" type="checkbox" />
     </div>
   </div>
+  <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
