--- a/angularHTMLayout/coffee/redirectEdit.ng.html
+++ b/angularHTMLayout/coffee/redirectEdit.ng.html
@@ -23,4 +23,5 @@
       ></select>
     </div>
   </div>
+  <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
