highlight step configuration

--- a/angularHTMLayout/coffee/diagram.ng.html
+++ b/angularHTMLayout/coffee/diagram.ng.html
@@ -24,4 +24,5 @@
   <div class="tabContent" ng-if="iTemplate == selectedTemplateID" ng-repeat="(iTemplate, template) in diagramTemplate">
     <div ng-include src="'../../common/html/coffee/diagram.template.ng.html'"></div>
   </div>
+  <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
