--- a/angularHTMLayout/coffee/cdsEnhanced.ng.html
+++ b/angularHTMLayout/coffee/cdsEnhanced.ng.html
@@ -1,6 +1,6 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width ">
+    <div class="row-cell row-cell-value row-cell-max-width">
       <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/cdsEnhanced_description.ng.html'"></div>
     </div>
   </div>
@@ -12,8 +12,8 @@
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('cds_default_icon')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value ">
-      <div class="bootstrap-iso" style="display: flex; overflow: visible">
+    <div class="row-cell row-cell-value">
+      <div class="bootstrap-iso" style="display: flex; overflow: visible;">
         <select
           ng-include
           src="'../../common/html/coffee/fa.ng.html'"
