property color support

--- a/angularHTMLayout/coffee/cdsEnhanced.ng.html
+++ b/angularHTMLayout/coffee/cdsEnhanced.ng.html
@@ -23,7 +23,7 @@
           id="{{filterId}}"
           ng-init="bootstrapFilter(filterId)"
           ng-model="config.defaultIcon"
-        />
+        ></select>
       </div>
     </div>
   </div>
